# filesystem_in_a_file

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: btrfs.rs  bytes_ext.rs  cmp.rs  cpio.rs  dir.rs  entry.rs  extract.rs  file.rs  iter.rs  lib.rs  materialize.rs  path.rs  tar.rs
src/archive/: cpio.rs  mod.rs  tar.rs
src/diff/: diffable.rs  mod.rs
src/diff/testdata/: passwd.after  passwd.before  passwd_diff.txt  whole_fs_diff.txt
src/file/: extent.rs  mod.rs  reader.rs  writer.rs
src/tar/: mod.rs  testdata.tar
src/tar/testdata/: testdata.tar
testdata/: rebuild.sh  testdata.cpio  testdata.sendstream  testdata.tar  whole_fs_diff.txt
