[package]
edition = "2021"
name = "filesystem_in_a_file"
version = "0.1.0"

[dependencies]
anyhow = "1"
bitflags = "1.3"
bytes = "1.3"
console = {version = "0.15", optional = true}
cpio = {version = "0.2", optional = true}
derive_builder = "0.12"
derive_more = "0.99"
getset = "0.1"
memmap = {version = "0.7", optional = true}
nix = "0.26"
remain = "0.2"
sendstream_parser = {version = "0.2.2", optional = true}
similar = {version = "2.2", optional = true}
slotmap = "1.0"
tar = {version = "0.4", optional = true}
thiserror = "1"
twox-hash = {version = "1.6", optional = true}
uuid = {version = "1.2", optional = true}
xattr = "1"

[features]
archive = []
btrfs = ["dep:memmap", "dep:sendstream_parser", "dep:uuid"]
cpio = ["archive", "dep:cpio", "dep:memmap"]
default = ["btrfs", "cpio", "diff", "tar"]
diff = ["dep:console", "dep:similar", "dep:twox-hash"]
tar = ["archive", "dep:memmap", "dep:tar"]

[dev-dependencies]
pretty_assertions = "1.3"
rstest = "0.16"
similar-asserts = "1.4"
tempfile = "3.3"

[badges]
docs = {url = "https://img.shields.io/docsrs/filesystem_in_a_file"}
github = {repository = "vmagro/filesystem_in_a_file"}
maintenance = {status = "experimental"}
